--- a/SiteServer.Web/SiteServer/dashboard.cshtml
+++ b/SiteServer.Web/SiteServer/dashboard.cshtml
@@ -1,9 +1,10 @@
+@using SiteServer.Utils
 @{ Layout = "./Shared/_LayoutRoot.cshtml"; }
 
 <div>
 
   <h4 class="page-title mt-4 mb-4">
-    欢迎使用 SiteServer CMS 管理后台
+    欢迎使用 网站管理后台
   </h4>
 
   <div class="row text-center">
