--- a/SiteServer.Web/SiteServer/main.cshtml
+++ b/SiteServer.Web/SiteServer/main.cshtml
@@ -5,7 +5,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>网站 - 管理后台</title>
+    <title>网站 - 管理平台</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="renderer" content="webkit" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
